#1005 Fix keyframe intro field alignment

--- a/app/assets/stylesheets/keyframes.css.less
+++ b/app/assets/stylesheets/keyframes.css.less
@@ -11,6 +11,12 @@
   max-width: 838px;
   overflow-y: hidden;
 
+  li:first-child {
+    div.transition {
+      top: 33px !important;
+    }
+  }
+
   li {
     .round-corners();
 
